cluster/prod/apps/trilium/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trilium
  namespace: trilium
  labels: { app: trilium }
spec:
  selector: { app: trilium }
  ports:
    - name: http
      port: 8080
      targetPort: http
